# commandlet

./: .gitignore  README.md  setup.cfg
commandlet/: __init__.py  commands.py  exc.py  filters.py  parser.py
tests/: command_test.py  conftest.py  parser_test.py
