[metadata]
name = commandlet
summary = Werkzeug-style command parsing.
author = Chris Norman
author-email = chris.norman2@googlemail.com
description-file = README.md
home-page = https://github.com/chrisnorman7/
license = MPL-2

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
